--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@headlessui/react": "^1.7.0",
     "@heroicons/react": "^2.0.10",
     "@material-tailwind/react": "^1.0.6",
+    "@metamask/sdk-react": "^0.12.1",
+    "@metamask/sdk-react-ui": "^0.12.1",
     "@nextui-org/react": "^1.0.0-beta.10",
     "@openzeppelin/contracts": "^4.5.0",
     "@ramonak/react-progress-bar": "^4.4.0",
