Web3Modal Integrated

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@walletconnect/web3-provider": "^1.8.0",
+    "@web3modal/ethers5": "^3.3.2",
     "@windmill/react-ui": "0.3.1",
     "avataaars": "^2.0.0",
     "axios": "^0.26.1",
@@ -32,7 +33,7 @@
     "date-and-time": "^2.3.1",
     "dateformat": "^5.0.3",
     "ethereum-waffle": "^3.4.4",
-    "ethers": "5.7.0",
+    "ethers": "^5.7.2",
     "faker": "4.1.0",
     "file-loader": "^6.2.0",
     "form-data": "^4.0.0",
