--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "install": "^0.13.0",
     "next-themes": "^0.2.1",
     "picmo": "^5.6.3",
+    "postcss-flexbugs-fixes": "^5.0.2",
+    "postcss-preset-env": "^9.3.0",
     "pretty-bytes": "^6.0.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
