--- a/XMTP Chat/package.json
+++ b/XMTP Chat/package.json
@@ -8,28 +8,9 @@
     "clean": "npm run clean:build && rm -rf node_modules",
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "lint": "eslint . --ignore-path .gitignore",
-    "typecheck": "tsc",
-    "cypress": "cypress run",
-    "fmt:check": "prettier -c --ignore-path .gitignore --ignore-path .prettierignore .",
-    "fmt:fix": "prettier -w --ignore-path .gitignore --ignore-path .prettierignore .",
-    "e2e:headless": "start-server-and-test dev http://localhost:5173 cypress",
-    "test": "vitest run",
-    "storybook": "storybook dev",
-    "build-storybook": "build-storybook",
-    "postinstall": "patch-package"
+    "preview": "vite preview"
   },
-  "author": "XMTP Labs <eng@xmtp.com>",
   "license": "MIT",
-  "homepage": "https://github.com/xmtp-labs/xmtp-inbox-web",
-  "repository": {
-    "type": "git",
-    "url": "https:git@github.com:xmtp-labs/xmtp-inbox-web.git"
-  },
-  "bugs": {
-    "url": "https://github.com/xmtp-labs/xmtp-inbox-web/issues"
-  },
   "dependencies": {
     "@datadog/browser-rum": "^4.38.0",
     "@headlessui/react": "^1.4.3",
