--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@metamask/sdk-react": "^0.12.1",
     "@metamask/sdk-react-ui": "^0.12.1",
     "@nextui-org/react": "^1.0.0-beta.10",
+    "@nucypher/taco": "^0.1.0-rc.6",
     "@openzeppelin/contracts": "^4.5.0",
     "@ramonak/react-progress-bar": "^4.4.0",
     "@react-google-maps/api": "^2.8.1",
